  - Fix plotgroups being able to be named with characters that ought to be filtered out.
  - Make plotgroups which load and throw an AlreadyRegisteredException actually print out which one is no good.
  - Add Adventure library, courtesy of Warriorrrr with PR #4870.
  - es-419 updated by EuGNosii, with PR #4881.
  - Add ability to make capital cities have a higher resident cap.
    - Closes #4841.
  - New Config Option: global_town_settings.max_residents_capital_override
    - Default: 0
    - The maximum number of residents that can be joined to a capital city.
    - Requires max_residents_capital_override to be above 0.
    - Uses the greater of max_residents_capital_override and max_residents_per_town.
  - Add town/nation name blacklist config option, courtesy of Warriorrrr with PR #4878.
    - Closes #4875.
  - New Config Option: plugin.name_blacklist
    - Default: empty
    - A blacklist used for validating town/nation names.
    - Names must be seperated by a comma: name1,name2
  - Deprecated: EconomyException
    - The economy exception is no longer thrown by Towny.
    - After close examination it was found that the exception is no longer needed.     
0.96.7.14:
  - Add option to require FrostWalker enchantment to require build rights to freeze water.
    - Closes #4887
  - New Config Option: protection.prevent_frost_walker_freezing
    - Default: false
    - When set to true, players with the Frost Walker enchant will need to be able to build where they are attempting to freeze.
  - Add ability to show chunk notifications in the BossBar, courtesy of Warriorrrr with PR #4888.
    - Closes #4882
  - New Config Option: notification.notifications_appear_on_bossbar
    - Default: false
    - When enabled, notifications will appear on the bossbar instead of in chat or above the action bar.
    - Uses the duration from below for how long the bossbar appears.